--- a/AoC2024.cabal
+++ b/AoC2024.cabal
@@ -59,3 +59,7 @@ common day
 executable Day1
     import:           day
     main-is:          Day1.hs
+    
+executable Day2
+    import:  day
+    main-is: Day2.hs
