--- a/AoC2024.cabal
+++ b/AoC2024.cabal
@@ -63,3 +63,9 @@ executable Day1
 executable Day2
     import:  day
     main-is: Day2.hs
+
+executable Day3
+    import:  day
+    main-is: Day3.hs
+    build-depends:
+        text
