--- a/AoC2024.cabal
+++ b/AoC2024.cabal
@@ -69,3 +69,9 @@ executable Day3
     main-is: Day3.hs
     build-depends:
         text
+
+executable Day4
+    import: day
+    main-is: Day4.hs
+    build-depends:
+        containers
